fix: layout issue on product page

--- a/components/product/ProductView/ProductView.module.scss
+++ b/components/product/ProductView/ProductView.module.scss
@@ -64,6 +64,7 @@
     margin-top: -1.5vw;
 
     .leftSide {
+      width: 90%;
       height: 100%;
       margin: auto;
       margin-bottom: 3rem;
@@ -127,6 +128,7 @@
         margin: auto;
         margin-top: 0;
         margin-bottom: 50px;
+        width: 400px;
       }
 
       .productDisplay {
